syntax = "proto3";
package CompartirZF;

service CompartirZFService {
    rpc CompartirZF(Compartir) returns (Respuesta) {}
}

service NotificacionService {
    rpc Notificar(Notificacion) returns (Respuesta) {}
}

service MergearService {
    rpc Mergear(Merge) returns (Respuesta) {}
}

service MergeDoneService {
    rpc MergeDone(Pears) returns (Respuesta) {}
}

message Merge {
    string fileAsStr = 1;
    string reloj = 2;
    string Dominio = 3;
}

message Compartir {
    string ZFContent = 1;
    string Dominio = 2;
    string reloj = 3;
}

message Pears {
    string Status1 = 1;
    string Status2 = 2;
    string Status3 = 3;
    string Orchestrator = 4;
}

message Notificacion {
    string DNSOrchestrator = 1;
}

message Respuesta {
    string reloj = 1;
}
